freest/test/prog/Invalid/Scoping/MultipleDeclsCons/MultipleDeclsCons.fst
module MultipleDeclsCons where

data Foo = Bar Int | Bar
